# Triumph

./: .gitignore  CHANGELOG.md  README.md  diff.txt  package-lock.json  package.json
src/: App.tsx  index.css  types.ts
src-tauri/: 2  Cargo.toml  build.rs  build_error.txt  cmd_errors.txt  cmd_errors011.txt  cmd_errors012.txt  cmd_errors2.txt  err.txt  errors.txt  tauri.conf.json  triumph_crash.txt  triumph_crash2.txt  worker_err.txt
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: main.rs
src/components/: AppHeader.tsx  CloseDialog.tsx  DashboardView.tsx  GamesList.tsx  SettingsView.tsx  ShadowLogView.tsx  TitleBar.tsx  VaultModal.tsx
src/hooks/: useShadowLog.ts  useSteamData.ts  useWindowControls.tsx
src/utils/: images.ts  worker.ts
