[package]
name = "triumph"
version = "2.0.0"
description = "A Tauri App"
authors = ["you"]
default-run = "triumph"
edition = "2021"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "triumph_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
steamworks = "0.11.0"
tauri-plugin-shell = "2.3.5"
winreg = "0.56.0"
regex = "1.12.3"
ureq = "3.3.0"

[[bin]]
name = "triumph"
path = "src/main.rs"

[[bin]]
name = "triumph_worker"
path = "src/bin/triumph_worker.rs"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"

[patch.crates-io]
steamworks = { path = "vendor/steamworks" }
